--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.Rmd
@@ -142,6 +142,9 @@ base::load(here("06_Paper","ER-ED","ERED_Stage2","Workspace_ERED.RData"))
 ```{r child = "Results.Rmd"}
 ```
 
+```{r child = "Discussion.Rmd"}
+```
+
 # References
 
 ```{=tex}
